Create the first version of the obligations feature
